Possible regression: Blender 3.0.0: Cycles: Compositor: Denoise node #92400

Closed
opened 2021-10-22 03:37:28 +02:00 by David Black · 9 comments

System Information
Linux Mint 20.2 Cinnamon
3400G

Blender Version
Broken:
blender-3.0.0-alpha+master.9dff3de6acb3-linux.x86_64-release.tar.xz
blender-3.0.0-alpha+master.2055ef107a7c-linux.x86_64-release.tar.xz
blender-3.0.0-alpha+master.4a00faca1a5e-linux.x86_64-release.tar.xz
blender-3.0.0-alpha+master.d7b231baa87e-linux.x86_64-release.tar.xz
blender-3.0.0-alpha+master.ef9269bd62f3-linux.x86_64-release.tar.xz

Worked:
blender-3.0.0-alpha+master.23791db14563-linux.x86_64-release.tar.xz
blender-3.0.0-alpha+master.a3e2cc0bb7fe-linux.x86_64-release.tar.xz
blender-3.0.0-alpha+master.886196b88817-linux.x86_64-release.tar.xz
blender-3.0.0-alpha+master.79425ed32676-linux.x86_64-release.tar.xz
blender-3.0.0-alpha+master.4b31a21bcd19-linux.x86_64-release.tar.xz
blender-3.0.0-alpha+master.53af51ad50ec-linux.x86_64-release.tar.xz

Short description of error
With recent versions of Blender, using the compositor Denoise node; all Prefilter settings appear to output 'Fast'.

Exact steps for others to reproduce the error
Compositing Denoise node issue.blend

  1. open the above 'Compositing Denoise node issue.blend' and press F12 (renders quickly)
  2. close the render window
  3. in the Compositing window switch between Composite and ViewLayer**

Render panel and Denoise node Prefilter are both set to 'Accurate', so the result should appear the same.

ViewLayer - Accurate
Prefilter ' Accurate' - ViewLayer.png

Composit - Accurate
Prefilter ' Accurate' - Composit.png

Changing the render panel Prefilter to 'Fast', re-render, now ViewLayer and Composit match no matter which Denoise node Prefilter setting is chosen.

ViewLayer - Fast
Prefilter ' Fast' - ViewLayer.png

**In 2.9.3 its "View Layer", while in 3.0.0 "ViewLayer".
If the change is intentional due EXR issues, to improve readability, maybe there could be an underscore 'View_Layer'?

Kind regards.
PS: Samples deliberately set to 256 to help highlight denosing differences.

**System Information** Linux Mint 20.2 Cinnamon 3400G **Blender Version** Broken: blender-3.0.0-alpha+master.9dff3de6acb3-linux.x86_64-release.tar.xz blender-3.0.0-alpha+master.2055ef107a7c-linux.x86_64-release.tar.xz blender-3.0.0-alpha+master.4a00faca1a5e-linux.x86_64-release.tar.xz blender-3.0.0-alpha+master.d7b231baa87e-linux.x86_64-release.tar.xz blender-3.0.0-alpha+master.ef9269bd62f3-linux.x86_64-release.tar.xz Worked: blender-3.0.0-alpha+master.23791db14563-linux.x86_64-release.tar.xz blender-3.0.0-alpha+master.a3e2cc0bb7fe-linux.x86_64-release.tar.xz blender-3.0.0-alpha+master.886196b88817-linux.x86_64-release.tar.xz blender-3.0.0-alpha+master.79425ed32676-linux.x86_64-release.tar.xz blender-3.0.0-alpha+master.4b31a21bcd19-linux.x86_64-release.tar.xz blender-3.0.0-alpha+master.53af51ad50ec-linux.x86_64-release.tar.xz **Short description of error** With recent versions of Blender, using the compositor Denoise node; all Prefilter settings appear to output 'Fast'. **Exact steps for others to reproduce the error** [Compositing Denoise node issue.blend](https://archive.blender.org/developer/F11379390/Compositing_Denoise_node_issue.blend) 1. open the above 'Compositing Denoise node issue.blend' and press F12 (renders quickly) 2. close the render window 3. in the Compositing window switch between Composite and ViewLayer** Render panel and Denoise node Prefilter are both set to 'Accurate', so the result should appear the same. ViewLayer - Accurate ![Prefilter ' Accurate' - ViewLayer.png](https://archive.blender.org/developer/F11379830/Prefilter___Accurate__-_ViewLayer.png) Composit - Accurate ![Prefilter ' Accurate' - Composit.png](https://archive.blender.org/developer/F11379828/Prefilter___Accurate__-_Composit.png) Changing the render panel Prefilter to 'Fast', re-render, now ViewLayer and Composit match no matter which Denoise node Prefilter setting is chosen. ViewLayer - Fast ![Prefilter ' Fast' - ViewLayer.png](https://archive.blender.org/developer/F11379829/Prefilter___Fast__-_ViewLayer.png) **In 2.9.3 its "View Layer", while in 3.0.0 "ViewLayer". If the change is intentional due EXR issues, to improve readability, maybe there could be an underscore 'View_Layer'? Kind regards. PS: Samples deliberately set to 256 to help highlight denosing differences.
Author

Added subscriber: @david_black

Added subscriber: @david_black
David Black changed title from Possible regression: Blender 3.0.0: Compositor: Denoise node to Possible regression: Blender 3.0.0: Cycles: Compositor: Denoise node 2021-10-22 03:54:41 +02:00
Member

Added subscribers: @manzanilla, @Alaska

Added subscribers: @manzanilla, @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm.

CC @manzanilla as it's probably caused by one of the patches between ecb8a574c7 - a3610c451a

System Information
Operating system: Linux-5.14.0-2-amd64-x86_64-with-glibc2.33 64 Bits
CPU: Ryzen 9 5950X

Blender Version: 3.0.0 Alpha, branch: master, commit date: 2021-10-21 21:23, hash: d9ebe25a0c

I can confirm. CC @manzanilla as it's probably caused by one of the patches between ecb8a574c7 - a3610c451a **System Information** Operating system: Linux-5.14.0-2-amd64-x86_64-with-glibc2.33 64 Bits CPU: Ryzen 9 5950X Blender Version: 3.0.0 Alpha, branch: master, commit date: 2021-10-21 21:23, hash: `d9ebe25a0c`

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Added subscriber: @brecht

Added subscriber: @brecht

Marking as high to ensure it gets fixed for 3.0.

Marking as high to ensure it gets fixed for 3.0.

This issue was referenced by dd505a7ebb

This issue was referenced by dd505a7ebba21a1823592be7e603c7d94188f4b7

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Manuel Castilla self-assigned this 2021-10-23 22:10:16 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92400
No description provided.