Fix T92400: Denoise node Prefilter output is always "Fast"

Caused by an accidental renaming in {rB1c42d4930a24d639b3aa561b9a8b4bbc}